--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    
+    <script async  
+    src="https://chat.taggoai.com/v2.js"
+    data-taggo-botid="658845b5edbcbf2f6822e4b3"></script>
   </body>
 </html>
